--- a/src/main/resources/templates/successfulRegistration.html
+++ b/src/main/resources/templates/successfulRegistration.html
@@ -5,8 +5,7 @@
     <title>Registration Success</title>
 </head>
 <body>
-<center>
-    <span th:text="'A verification email has been sent to: ' + ${emailId}"></span>
-</center>
+    <span th:text="'A verification email has been sent to: ' + ${email}"></span>
 </body>
 </html>
+<!--${email}-->
