--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,20 +8,20 @@
 <form action="#" th:action="@{/register}" th:object="${userEntity}" method="post">
     <table>
         <tr>
-            <td><label for="name">Name</label></td>
-            <td><input th:field="*{name}" type="text" name="name"></input></td>
+            <td><label>Name</label></td>
+            <td><input th:field="*{name}" type="text" name="name"></td>
         </tr>
         <tr>
-            <td><label for="email">Email</label></td>
-            <td><input th:field="*{email}" type="text" name="email"></input></td>
+            <td><label>Email</label></td>
+            <td><input th:field="*{email}" type="text" name="email"></td>
         </tr>
         <tr>
-            <td><label for="pass">Password</label></td>
-            <td><input th:field="*{pass}" type="password" name="password"></input></td>
+            <td><label>Password</label></td>
+            <td><input th:field="*{pass}" type="password" name="password"></td>
         </tr>
         <tr>
             <td><input type="reset" value="Clear"/></td>
-            <td><input type="submit" value="Submit"></input></td>
+            <td><input type="submit" value="Submit"></td>
         </tr>
     </table>
 </form>
