register button has been centered

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,9 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 
     </form>
-    <a class="btn btn-lg btn-primary btn-block" href="/register.html"><a
-            ></a>Register</a>
+    <div class="form-signin">
+        <a class="btn btn-lg btn-success btn-block mx-auto" href="/register">Register</a>
+    </div>
+
 </div>
 </body></html>
