--- a/src/main/resources/templates/successfulRegistration.html
+++ b/src/main/resources/templates/successfulRegistration.html
@@ -1,11 +1,20 @@
+
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Registration Success</title>
+    <title>Successful registration</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
 </head>
-<body>
-    <span th:text="'A verification email has been sent to: ' + ${email}"></span>
+<body style="background-color:#ffe7ad;">
+<div class="container mt-5">
+
+    <div class="alert alert-success">
+        <h2 class="mb-2">Successful registration!</h2>
+        <p th:text="'A verification email has been sent to: ' + ${email}"></p>
+
+    </div>
+</div>
 </body>
 </html>
-<!--${email}-->
