--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,6 +16,9 @@
         <div th:if="${param.error}" class="alert alert-danger">
             Invalid username and password.
         </div>
+        <div th:if="${param.logout}" class="alert alert-success">
+            You have been logged out.
+        </div>
         <p>
             <label for="username" class="sr-only">Username</label>
             <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
