--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -8,11 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Register</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
-    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
     <style>
         .sized{
 
@@ -96,7 +93,7 @@
         </div>
     </div>
 </div>
-<div class="container mt-3">
+<form class="container mt-3" action="/user/createBooking" method="post" th:object="${newBooking}">
     <div class="row mt-3 mb-3">
         <div class="col-lg-6 col-md-12 col-sm-12">
             <div class="row mx-auto">
@@ -107,8 +104,11 @@
                 </div>
                 <div class="col-9 col-md-12 col-sm-12 mx-auto text-center">
                     <p>
-                        <input id="datepicker" width="276" />
+                        <input type="date" th:field="*{startDate}" />
                     </p>
+<!--                    <p>-->
+<!--                        <input id="datepicker" width="276" />-->
+<!--                    </p>-->
                 </div>
             </div>
 
@@ -122,30 +122,23 @@
                 </div>
                 <div class="col-9 col-md-12 col-sm-12">
                     <p>
-                        <input id="datepicker2" width="276" />
+                        <input type="date" th:field="*{endDate}" />
                     </p>
                 </div>
             </div>
 
         </div>
     </div>
-</div>
-
-<div class="row mx-auto">
-    <div class="col-12 mx-auto text-center mt-5">
-        <button class="btn btn-warning" type="submit" >Next Step</button>
+    <div class="row mx-auto">
+        <div class="col-12 mx-auto text-center mt-5">
+            <button class="btn btn-warning" type="submit" >Next Step</button>
+        </div>
     </div>
-</div>
+</form>
+
+
 
 
 
 </body>
-<script>
-    $('#datepicker').datepicker({
-        uiLibrary: 'bootstrap4'
-    });
-    $('#datepicker2').datepicker({
-        uiLibrary: 'bootstrap4'
-    });
-</script>
 </html>
