--- a/src/main/resources/templates/bookingStepTwo.html
+++ b/src/main/resources/templates/bookingStepTwo.html
@@ -107,11 +107,10 @@
                 <div class="input-group-prepend">
                     <label class="input-group-text" for="inputGroupSelect01">Room Options</label>
                 </div>
+
                 <select class="custom-select" id="inputGroupSelect01">
                     <option selected>Choose...</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+                    <option th:each="room : ${availableRooms}" th:text="${room.getType()}"></option>
                 </select>
             </div>
         </div>
