--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -65,7 +65,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">My bookings <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="/user/dashboard">My bookings <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="/user/booking">Book a room</a>
                 <form class="nav-item form-inline" action="/logout" method="post">
                     <input type="hidden"
