--- a/src/main/resources/templates/bookingStepTwo.html
+++ b/src/main/resources/templates/bookingStepTwo.html
@@ -7,66 +7,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Register</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
-    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
-    <style>
-        .sized{
+    <title>Booking step 2</title>
 
-            width: 2rem;
-            height: auto;
-        }
-        .honeyYellow{
-            color:#FFB600;
-        }
-        .emberYellow{
-            color:#d19500;
-        }
-        .lightYellow{
-            color:#ffe7ad;
-        }
-        .honeyYellowBG{
-            background-color: #FFB600;
-        }
-        .emberYellowBG{
-            background-color:#d19500;
-        }
-        .table-striped tbody tr:nth-of-type(odd) {
-            color: #000;
-            background-color:#eaa700;
-        }
-        .dark{
-            background-color: #333333;
-        }
-        .whiteText{
-            color: #fff;
-        }
-        .table td, .table th {
-            vertical-align: baseline;
-            border-top: 1px solid #111;
-        }
-        .table thead th {
-            vertical-align: baseline;
-            border-bottom: 2px solid #111;
-        }
-        .darkBorder{
-            border-color: #111;
-        }
-        .gj-picker-bootstrap div[role=navigator]{
-            color:#000;
-        }
-        table{
-            color:#000;
-        }
-        .input-group-text{
-            background-color: #eaa700;
-            border: 1px solid #d19500;
-        }
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-    </style>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
+
+<style>
+    .sized{
+
+        width: 2rem;
+        height: auto;
+    }
+    .honeyYellow{
+        color:#FFB600;
+    }
+    .emberYellow{
+        color:#d19500;
+    }
+    .lightYellow{
+        color:#ffe7ad;
+    }
+    .honeyYellowBG{
+        background-color: #FFB600;
+    }
+    .emberYellowBG{
+        background-color:#d19500;
+    }
+    .table-striped tbody tr:nth-of-type(odd) {
+        color: #000;
+        background-color:#eaa700;
+    }
+    .dark{
+        background-color: #333333;
+    }
+    .whiteText{
+        color: #fff;
+    }
+    .table td, .table th {
+        vertical-align: baseline;
+        border-top: 1px solid #111;
+    }
+    .table thead th {
+        vertical-align: baseline;
+        border-bottom: 2px solid #111;
+    }
+    .darkBorder{
+        border-color: #111;
+    }
+    .gj-picker-bootstrap div[role=navigator]{
+        color:#000;
+    }
+    table{
+        color:#000;
+    }
+    .input-group-text{
+        background-color: #eaa700;
+        border: 1px solid #d19500;
+    }
+
+</style>
 </head>
 
 <body class="dark container-fluid p-0 whiteText dark">
@@ -109,7 +118,7 @@
                 </div>
 
                 <select class="custom-select" id="inputGroupSelect01">
-                    <option selected>Choose...</option>
+                    <option selected disabled>Choose...</option>
                     <option th:each="room : ${availableRooms}" th:text="${room.getType()}" th:attr="price=${room.getPrice()}"></option>
                 </select>
             </div>
@@ -123,7 +132,7 @@
 
 <div class="row mx-auto">
     <div class="col-12 mx-auto text-center mt-5">
-        <button class="btn btn-warning" type="submit" >Confirm Booking</button>
+        <button id="btnSubmit" class="btn btn-warning" type="submit" >Confirm Booking</button>
     </div>
 </div>
 
@@ -132,8 +141,10 @@
 </body>
 <script>
     $( document ).ready(function() {
-
+        $("#btnSubmit").hide();
+        $("#price").text("");
         $("#inputGroupSelect01").change(function(){
+            $("#btnSubmit").show();
             var selectedRoomPrice =  $(this).children("option:selected").attr("price");
             $("#price").text(selectedRoomPrice);
         });
