--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -77,7 +77,7 @@
 <!--       Header-->
 <div class="container-fluid p-0">
     <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #FFB600;">
-        <a class="navbar-brand" href="#"><img src="https://image.flaticon.com/icons/svg/25/25334.svg" alt="" class="sized"></a>
+        <a class="navbar-brand" href="/user/dashboard"><img src="https://image.flaticon.com/icons/svg/25/25334.svg" alt="" class="sized"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
