--- a/src/main/resources/templates/bookingStepTwo.html
+++ b/src/main/resources/templates/bookingStepTwo.html
@@ -82,7 +82,7 @@
 <!--       Header-->
 <div class="container-fluid p-0">
     <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #FFB600;">
-        <a class="navbar-brand" href="#"><img src="https://image.flaticon.com/icons/svg/25/25334.svg" alt="" class="sized"></a>
+        <a class="navbar-brand" href="/user/dashboard"><img src="https://image.flaticon.com/icons/svg/25/25334.svg" alt="" class="sized"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -119,7 +119,7 @@
 
                 <select class="custom-select" id="inputGroupSelect01">
                     <option selected disabled>Choose...</option>
-                    <option th:each="room : ${availableRooms}" th:text="${room.getType()}" th:attr="price=${room.getPrice()}"></option>
+                    <option th:each="room : ${availableRooms}" th:text="${room.getType()}" th:attr="price=${room.getPrice()}, roomid=${room.getRoomid()}"></option>
                 </select>
             </div>
         </div>
@@ -132,10 +132,10 @@
 
 <div class="row mx-auto">
     <div class="col-12 mx-auto text-center mt-5">
-        <button id="btnSubmit" class="btn btn-warning" type="submit" >Confirm Booking</button>
+        <a id="submitroom" class="btn btn-warning" type="submit" >Confirm Booking</a>
     </div>
 </div>
-
+<span id="bookingEntityHolder" th:attr="bookingId = ${newBooking.getIdBooking()}" style="display: none;"></span>
 
 
 </body>
@@ -147,6 +147,11 @@
             $("#btnSubmit").show();
             var selectedRoomPrice =  $(this).children("option:selected").attr("price");
             $("#price").text(selectedRoomPrice);
+            var selectedRoomId =  $(this).children("option:selected").attr("roomid");
+            var bookingIDSpan =  $("#bookingEntityHolder").attr("bookingId");
+            var route=selectedRoomId + "/" +bookingIDSpan;
+
+            $("#submitroom").attr("href", "confirm/" + route);
         });
 
     });
