--- a/src/main/resources/templates/successfulBooking.html
+++ b/src/main/resources/templates/successfulBooking.html
@@ -7,20 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>No Avialable Rooms</title>
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-
-    <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
+    <title>Register</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <style>
         .sized{
 
@@ -92,14 +80,14 @@
 </div>
 <div class="row mt-5">
     <div class="container">
-        <div class="alert alert-warning">
-            <h2 class="mb-2">No available rooms for this period</h2>
+        <div class="alert alert-success">
+            <h2 class="mb-2">Successful Booking!</h2>
         </div>
     </div>
 </div>
 <div class="row mx-auto">
     <div class="col-12 mx-auto text-center mt-5">
-        <a href="/user/dashboard/"><button class="btn btn-warning" type="" >Back to dashboard</button></a>
+        <a href="/user/dashboard"><button class="btn btn-success" type="" >Back to dashboard</button></a>
     </div>
 </div>
 
