--- a/src/main/resources/templates/addroom.html
+++ b/src/main/resources/templates/addroom.html
@@ -76,8 +76,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Awaiting Confirmation<span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Add a room</a>
+                <a class="nav-item nav-link active" href="/admin/adminPage">Awaiting Confirmation<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="/admin/addRoom">Add a room</a>
                 <form class="nav-item form-inline" action="/logout" method="post">
                     <input type="hidden"
                            name="${_csrf.parameterName}"
@@ -102,14 +102,14 @@
     <div class="col-12">
         <div class="container">
 
-            <form>
+            <form th:action="@{/admin/addRoom}" th:object="${newRoom}" method="post">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Type of room</label>
-                    <input type="text" class="form-control" placeholder="Type of room">
+                    <label>Type of room</label>
+                    <input th:field="*{type}" type="text" class="form-control" placeholder="Type of room">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Price per night</label>
-                    <input type="text" class="form-control" placeholder="Price">
+                    <label>Price per night</label>
+                    <input th:field="*{price}" type="text" class="form-control" placeholder="Price">
                 </div>
                 <button type="submit" class="btn btn-warning">Submit</button>
             </form>
