Add html page for Admin when room added successfully

--- a/src/main/resources/templates/addroom.html
+++ b/src/main/resources/templates/addroom.html
@@ -109,7 +109,7 @@
                 </div>
                 <div class="form-group">
                     <label>Price per night</label>
-                    <input th:field="*{price}" type="text" class="form-control" placeholder="Price">
+                    <input th:field="*{price}" type="number" class="form-control" placeholder="Price">
                 </div>
                 <button type="submit" class="btn btn-warning">Submit</button>
             </form>
